--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Hello, world!</h1>
-  <p>This is the start of my portfolio website.</p>
+  <p>This is the start of my portfolio website!</p>
 </body>
 </html>
