--- a/index.html
+++ b/index.html
@@ -13,43 +13,105 @@
   <link href="css/tailwind.css" rel="stylesheet">
 
 </head>
-<body class="bg-gray-50 text-gray-900 flex flex-col min-h-screen">
+<body class="bg-gray-50 text-gray-900 flex flex-col min-h-screen bg-[url('assets/images/Horizon.jpg')] bg-cover bg-center">
 
   <!-- Navbar -->
   <nav class="bg-black bg-opacity-90 fixed top-0 w-full z-50">
     <div class="max-w-5xl mx-auto px-4 py-2 flex justify-end space-x-6 text-gray-300 text-sm font-medium">
       <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="hover:text-indigo-500">Resume</a>
-      <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="hover:text-indigo-500">LinkedIn</a>
       <a href="https://github.com/Stonger44" target="_blank" class="hover:text-indigo-500">GitHub</a>
       <a href="https://stonger44.itch.io/" target="_blank" class="hover:text-indigo-500">Itch.io</a>
-      <a href="mailto:stonger44@gmail.com" class="hover:text-indigo-500">Email</a>
+      <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="hover:text-indigo-500">LinkedIn</a>
     </div>
   </nav>
 
   <!-- Spacer for fixed navbar -->
   <div class="h-12"></div>
 
-  <!-- Hero Section -->
-  <section class="flex flex-col md:flex-row items-center max-w-5xl mx-auto px-4 py-12 gap-8">
-    <img
-      src="assets/images/profilePic1.jpg"
-      alt="Brian Kenji Stong"
-      class="w-36 h-36 rounded-full photo-border object-cover"
-    />
-    <div class="flex flex-col items-center md:items-start text-center md:text-left">
-      <h1 class="text-4xl font-extrabold mb-2">Hi! I'm Brian Kenji Stong!</h1>
-      <p class="text-xl font-semibold mb-4">Game Developer, Software Engineer, Goober.</p>
-      <div>
-        <span id="typed-text" class="text-indigo-600 font-semibold text-lg h-6"></span>
-      </div>
-    </div>
-  </section>
+<!-- Hero Section -->
+<section class="flex flex-col md:flex-row items-center max-w-5xl mx-auto px-4 py-16 gap-12">
+  <img
+    src="assets/images/profilePic1.jpg"
+    alt="Brian Kenji Stong"
+    class="w-44 h-44 md:w-56 md:h-56 rounded-full photo-border object-cover flex-shrink-0"
+  />
+  <div class="flex flex-col items-center md:items-start text-center md:text-left flex-1 min-w-0">
+    <h1 class="text-4xl md:text-5xl font-bold mb-4 whitespace-nowrap">Brian Kenji Stong</h1>
+    <p class="text-2xl md:text-3xl font-semibold mb-6 overflow-hidden text-ellipsis whitespace-nowrap">
+      <span id="typed-text" class="text-indigo-600"></span>
+    </p>
+  </div>
+</section>
 
   <!-- Projects Section -->
   <section id="projects" class="max-w-5xl mx-auto px-4 py-12 space-y-12">
 
+    <h2 class="text-4xl font-bold mb-8 text-left pl-4">Projects</h2>
+
     <!-- Example Project -->
     <div class="flex flex-col md:flex-row items-center gap-6">
+      <video
+        src="assets/projects/cozy-island-loop.mp4"
+        autoplay
+        muted
+        loop
+        playsinline
+        class="w-full md:w-1/2 rounded-lg shadow-lg"
+      ></video>
+      <div class="md:w-1/2 flex flex-col space-y-3">
+        <h2 class="text-2xl font-bold">Cozy Island</h2>
+        <p>
+          A relaxing resource gathering game inspired by soothing ASMR sounds. Built in Unreal Engine.
+        </p>
+        <div class="space-x-4">
+          <a
+            href="https://your-itch-io-link.com"
+            target="_blank"
+            class="inline-block px-5 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition"
+            >Play</a
+          >
+          <a
+            href="https://github.com/yourusername/cozy-island"
+            target="_blank"
+            class="inline-block px-5 py-2 border border-indigo-600 text-indigo-600 rounded hover:bg-indigo-600 hover:text-white transition"
+            >Source</a
+          >
+        </div>
+      </div>
+    </div>
+
+        <div class="flex flex-col md:flex-row items-center gap-6">
+      <video
+        src="assets/projects/cozy-island-loop.mp4"
+        autoplay
+        muted
+        loop
+        playsinline
+        class="w-full md:w-1/2 rounded-lg shadow-lg"
+      ></video>
+      <div class="md:w-1/2 flex flex-col space-y-3">
+        <h2 class="text-2xl font-bold">Cozy Island</h2>
+        <p>
+          A relaxing resource gathering game inspired by soothing ASMR sounds. Built in Unreal Engine.
+        </p>
+        <div class="space-x-4">
+          <a
+            href="https://your-itch-io-link.com"
+            target="_blank"
+            class="inline-block px-5 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition"
+            >Play</a
+          >
+          <a
+            href="https://github.com/yourusername/cozy-island"
+            target="_blank"
+            class="inline-block px-5 py-2 border border-indigo-600 text-indigo-600 rounded hover:bg-indigo-600 hover:text-white transition"
+            >Source</a
+          >
+        </div>
+      </div>
+    </div>
+
+        <div class="flex flex-col md:flex-row items-center gap-6">
       <video
         src="assets/projects/cozy-island-loop.mp4"
         autoplay
@@ -85,12 +147,17 @@
   </section>
 
   <!-- Footer -->
-  <footer class="mt-auto bg-gray-800 text-gray-400 text-center py-6 text-sm select-none">
-    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="hover:text-indigo-500">LinkedIn</a>
-    &nbsp;|&nbsp;
-    <a href="https://twitter.com/yourhandle" target="_blank" class="hover:text-indigo-500">Twitter</a>
-    <br />
-    Copyright &copy; <span id="year"></span>
+  <footer class="mt-auto bg-black text-gray-300 text-center py-6 text-sm select-none">
+  <nav class="mb-4">
+    <a href="resume.pdf" class="mx-3  hover:underline">Resume</a>
+    <a href="https://github.com/Stonger44" target="_blank" class="mx-3  hover:underline">GitHub</a>
+    <a href="https://stonger44.itch.io/" target="_blank" class="mx-3 hover:underline">Itch.io</a>
+    <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="mx-3 hover:underline">LinkedIn</a>
+  </nav>
+    <p>
+      Copyright &copy; <span id="year"></span> &nbsp;|&nbsp;
+    <a href="mailto:stonger44@gmail.com" class="hover:underline">stonger44@gmail.com</a>
+    </p>
   </footer>
 
   <script src="js/main.js"></script>
