added background for now

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <link href="css/tailwind.css" rel="stylesheet">
 
 </head>
-<body class="bg-gray-50 text-gray-900 flex flex-col min-h-screen bg-[url('assets/images/Horizon.jpg')] bg-cover bg-center">
+<body class="bg-gray-50 text-gray-900 flex flex-col min-h-screen bg-[url('..//assets/images/Horizon.jpg')] bg-cover bg-center">
 
   <!-- Navbar -->
   <nav class="bg-black bg-opacity-90 fixed top-0 w-full z-50">
-    <div class="max-w-5xl mx-auto px-4 py-2 flex justify-end space-x-6 text-gray-300 text-sm font-medium">
+    <div class="max-w-5xl mx-auto px-4 py-4 flex justify-center space-x-6 text-gray-300 text-sm font-medium">
       <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="hover:text-indigo-500">Resume</a>
       <a href="https://github.com/Stonger44" target="_blank" class="hover:text-indigo-500">GitHub</a>
       <a href="https://stonger44.itch.io/" target="_blank" class="hover:text-indigo-500">Itch.io</a>
