--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <link href="css/tailwind.css" rel="stylesheet">
 
 </head>
-<body class="bg-gray-50 text-gray-900 flex flex-col min-h-screen bg-[url('..//assets/images/Horizon.jpg')] bg-cover bg-center">
+<body class="bg-gray-900 text-white flex flex-col min-h-screen bg-[url('../assets/images/Horizon.jpg')] bg-cover bg-center relative">
+  <!-- <div class="fixed inset-0 bg-gray-200 bg-opacity-10 -z-10"></div> -->
 
   <!-- Navbar -->
   <nav class="bg-black bg-opacity-90 fixed top-0 w-full z-50">
@@ -37,8 +38,8 @@
   />
   <div class="flex flex-col items-center md:items-start text-center md:text-left flex-1 min-w-0">
     <h1 class="text-4xl md:text-5xl font-bold mb-4 whitespace-nowrap">Brian Kenji Stong</h1>
-    <p class="text-2xl md:text-3xl font-semibold mb-6 overflow-hidden text-ellipsis whitespace-nowrap">
-      <span id="typed-text" class="text-indigo-600"></span>
+    <p class="text-2xl md:text-3xl font-semibold mb-6 whitespace-nowrap">
+      <span id="typed-text"></span>
     </p>
   </div>
 </section>
