--- a/index.html
+++ b/index.html
@@ -10,49 +10,54 @@
   <!-- Typed.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
+  <link rel="icon" type="image/x-icon" href="assets/favicons/favicon.ico">
+
+  <link href="css/style.css" rel="stylesheet">
   <link href="css/tailwind.css" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
-<body class="bg-gray-900 text-white flex flex-col min-h-screen bg-[url('../assets/images/Horizon.jpg')] bg-cover bg-center relative">
+<body class="bg-gray-900 font-roboto text-white flex flex-col min-h-screen bg-[url('../assets/images/Horizon.jpg')] bg-cover bg-center relative">
   <!-- <div class="fixed inset-0 bg-gray-200 bg-opacity-10 -z-10"></div> -->
 
   <!-- Navbar -->
   <nav class="bg-black bg-opacity-90 fixed top-0 w-full z-50">
     <div class="max-w-5xl mx-auto px-4 py-4 flex justify-center space-x-6 text-gray-300 text-sm font-medium">
-      <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="hover:text-indigo-500">Resume</a>
-      <a href="https://github.com/Stonger44" target="_blank" class="hover:text-indigo-500">GitHub</a>
-      <a href="https://stonger44.itch.io/" target="_blank" class="hover:text-indigo-500">Itch.io</a>
-      <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="hover:text-indigo-500">LinkedIn</a>
+      <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="hover:underline">Resume</a>
+      <a href="https://github.com/Stonger44" target="_blank" class="hover:underline">GitHub</a>
+      <a href="https://stonger44.itch.io/" target="_blank" class="hover:underline">Itch.io</a>
+      <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="hover:underline">LinkedIn</a>
     </div>
   </nav>
 
   <!-- Spacer for fixed navbar -->
   <div class="h-12"></div>
 
-<!-- Hero Section -->
-<section class="flex flex-col md:flex-row items-center max-w-5xl mx-auto px-4 py-16 gap-12">
-  <img
-    src="assets/images/profilePic1.jpg"
-    alt="Brian Kenji Stong"
-    class="w-44 h-44 md:w-56 md:h-56 rounded-full photo-border object-cover flex-shrink-0"
-  />
-  <div class="flex flex-col items-center md:items-start text-center md:text-left flex-1 min-w-0">
-    <h1 class="text-4xl md:text-5xl font-bold mb-4 whitespace-nowrap">Brian Kenji Stong</h1>
-    <p class="text-2xl md:text-3xl font-semibold mb-6 whitespace-nowrap">
-      <span id="typed-text"></span>
-    </p>
-  </div>
-</section>
+  <!-- Hero Section -->
+  <section class="flex flex-col md:flex-row items-center max-w-5xl mx-auto px-4 py-16 gap-12">
+    <img
+      src="assets/images/profilePic1.jpg"
+      alt="Brian Kenji Stong"
+      class="w-44 h-44 md:w-56 md:h-56 rounded-full photo-border object-cover flex-shrink-0"
+    />
+    <div class="flex flex-col items-center md:items-start text-center md:text-left flex-1 min-w-0">
+      <h1 class="text-4xl md:text-5xl font-bold mb-4 whitespace-nowrap">Brian Kenji Stong</h1>
+      <p class="text-2xl md:text-3xl font-semibold mb-6 whitespace-nowrap">
+        <span id="typed-text"></span>
+      </p>
+    </div>
+  </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="max-w-5xl mx-auto px-4 py-12 space-y-12">
+  <section id="projects" class="max-w-5xl mx-auto px-4 py-10 space-y-12">
 
-    <h2 class="text-4xl font-bold mb-8 text-left pl-4">Projects</h2>
+    <h2 class="text-4xl font-bold mb-4 text-left">Projects</h2>
 
-    <!-- Example Project -->
+    <!-- Cozy Island -->
     <div class="flex flex-col md:flex-row items-center gap-6">
       <video
-        src="assets/projects/cozy-island-loop.mp4"
+        src="assets/videos/CozyIsland_Demo.mp4"
         autoplay
         muted
         loop
@@ -60,30 +65,38 @@
         class="w-full md:w-1/2 rounded-lg shadow-lg"
       ></video>
       <div class="md:w-1/2 flex flex-col space-y-3">
-        <h2 class="text-2xl font-bold">Cozy Island</h2>
+        <div>
+          <h2 class="text-2xl font-bold inline">Cozy Island</h2>
+          <span class="">Solo Developer</span>
+        </div>
+        <p><strong>Tech:</strong> Unreal Engine, Blueprints</p>
         <p>
-          A relaxing resource gathering game inspired by soothing ASMR sounds. Built in Unreal Engine.
+          Relax on a cozy island inspired by calming ASMR audio. Explore the island, gather wood and stone resources, and build simple things. Enjoy your time on Cozy Island!
+        </p>
+        <p>
+          Developed a modular resource tracking system for buildable actors, a hybrid collision/line trace interaction system using custom object and trace channels, and a footstep audio system using physical material detection via trace.
         </p>
         <div class="space-x-4">
           <a
-            href="https://your-itch-io-link.com"
+            href="https://github.com/Stonger44/Cozy-Island"
             target="_blank"
-            class="inline-block px-5 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition"
-            >Play</a
+            class="inline-block px-5 py-2 border rounded hover:bg-black transition"
+            >GitHub Repo</a
           >
           <a
-            href="https://github.com/yourusername/cozy-island"
+            href="https://stonger44.itch.io/cozy-island"
             target="_blank"
-            class="inline-block px-5 py-2 border border-indigo-600 text-indigo-600 rounded hover:bg-indigo-600 hover:text-white transition"
-            >Source</a
+            class="inline-block px-5 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition"
+            >Get on Itch.io</a
           >
         </div>
       </div>
     </div>
 
-        <div class="flex flex-col md:flex-row items-center gap-6">
+    <!-- Galaxy Shooter -->
+    <div class="flex flex-col md:flex-row items-center gap-6">
       <video
-        src="assets/projects/cozy-island-loop.mp4"
+        src="assets/videos/CozyIsland_Demo.mp4"
         autoplay
         muted
         loop
@@ -91,30 +104,38 @@
         class="w-full md:w-1/2 rounded-lg shadow-lg"
       ></video>
       <div class="md:w-1/2 flex flex-col space-y-3">
-        <h2 class="text-2xl font-bold">Cozy Island</h2>
+        <div>
+          <h2 class="text-2xl font-bold inline">Galaxy Shooter</h2>
+          <span class="">Solo Developer</span>
+        </div>
+        <p><strong>Tech:</strong> Unity, C#</p>
         <p>
-          A relaxing resource gathering game inspired by soothing ASMR sounds. Built in Unreal Engine.
+          A horizontal space shooter arcade! Pew pew enemies! Collect Power-Ups! Shields! Missiles! Space Bombs! Can you survive all 5 waves and defeat the Boss?!
+        </p>
+        <p>
+          Horizontal space shooter with difficulty inspired by Dark Souls. Multi-phase boss battle with regenerating shields, destructible generators, and timed vulnerability. Implemented a time-slowing boost, homing missiles, and space bombs with expanding visual radius for high-impact tactical play. Power-ups must be earned and used strategically.
         </p>
         <div class="space-x-4">
           <a
-            href="https://your-itch-io-link.com"
-            target="_blank"
-            class="inline-block px-5 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition"
-            >Play</a
-          >
-          <a
-            href="https://github.com/yourusername/cozy-island"
+            href="https://github.com/Stonger44/Galaxy-Shooter"
             target="_blank"
             class="inline-block px-5 py-2 border border-indigo-600 text-indigo-600 rounded hover:bg-indigo-600 hover:text-white transition"
-            >Source</a
+            >GitHub Repo</a
+          >
+          <a
+            href="https://stonger44.itch.io/galaxy-shooter"
+            target="_blank"
+            class="inline-block px-5 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition"
+            >Play it on Itch.io</a
           >
         </div>
       </div>
     </div>
 
-        <div class="flex flex-col md:flex-row items-center gap-6">
+    <!-- Mech Tower Defense -->
+    <div class="flex flex-col md:flex-row items-center gap-6">
       <video
-        src="assets/projects/cozy-island-loop.mp4"
+        src="assets/videos/CozyIsland_Demo.mp4"
         autoplay
         muted
         loop
@@ -122,39 +143,46 @@
         class="w-full md:w-1/2 rounded-lg shadow-lg"
       ></video>
       <div class="md:w-1/2 flex flex-col space-y-3">
-        <h2 class="text-2xl font-bold">Cozy Island</h2>
+        <div>
+          <h2 class="text-2xl font-bold inline">Mech Tower Defense</h2>
+          <span class="">Solo Developer</span>
+        </div>
+        <p><strong>Tech:</strong> Unity, C#</p>
         <p>
-          A relaxing resource gathering game inspired by soothing ASMR sounds. Built in Unreal Engine.
+          Defend your home from invading Mechs! Deploy, repair, and upgrade Auto Cannon and Missile Launcher Towers! Hold the line!
+        </p>
+        <p>
+          Endless tower defense game with deployable, repairable, and upgradeable towers. Created indirect-fire missile launcher for targeting heavy mechs. Designed responsive HUD that flickers yellow on damage, red at low health, and resets on restart to reinforce player state.
         </p>
         <div class="space-x-4">
           <a
-            href="https://your-itch-io-link.com"
-            target="_blank"
-            class="inline-block px-5 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition"
-            >Play</a
-          >
-          <a
-            href="https://github.com/yourusername/cozy-island"
+            href="https://github.com/Stonger44/Mech-Tower-Defense"
             target="_blank"
             class="inline-block px-5 py-2 border border-indigo-600 text-indigo-600 rounded hover:bg-indigo-600 hover:text-white transition"
-            >Source</a
-          >
+            >GitHub Repo</a>
+          <a
+            href="https://stonger44.itch.io/mech-tower-defense"
+            target="_blank"
+            class="inline-block px-5 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition"
+            >Get it on Itch.io</a>
         </div>
       </div>
     </div>
 
-    <!-- Add more projects here using the same structure -->
-
+    <!-- Next Project -->
+    
+    <!-- Space -->
+    <div class="h-8 md:h-12"></div>
   </section>
 
   <!-- Footer -->
   <footer class="mt-auto bg-black text-gray-300 text-center py-6 text-sm select-none">
-  <nav class="mb-4">
-    <a href="resume.pdf" class="mx-3  hover:underline">Resume</a>
-    <a href="https://github.com/Stonger44" target="_blank" class="mx-3  hover:underline">GitHub</a>
-    <a href="https://stonger44.itch.io/" target="_blank" class="mx-3 hover:underline">Itch.io</a>
-    <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="mx-3 hover:underline">LinkedIn</a>
-  </nav>
+    <nav class="mb-4">
+      <a href="resume.pdf" class="mx-3  hover:underline">Resume</a>
+      <a href="https://github.com/Stonger44" target="_blank" class="mx-3  hover:underline">GitHub</a>
+      <a href="https://stonger44.itch.io/" target="_blank" class="mx-3 hover:underline">Itch.io</a>
+      <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="mx-3 hover:underline">LinkedIn</a>
+    </nav>
     <p>
       Copyright &copy; <span id="year"></span> &nbsp;|&nbsp;
     <a href="mailto:stonger44@gmail.com" class="hover:underline">stonger44@gmail.com</a>
