--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="bg-gray-900 font-roboto text-white text-lg flex flex-col min-h-screen bg-[url('../assets/images/Horizon.jpg')] bg-cover bg-center relative">
   
   <!-- Background dim overlay -->
-  <div class="absolute inset-0 bg-black/22 z-0"></div>
+  <div class="absolute inset-0 bg-black/30 z-0"></div>
 
   <div class="relative z-10 flex flex-col min-h-screen">
     <!-- Navbar -->
@@ -70,7 +70,7 @@
         <div class="md:w-1/2 flex flex-col space-y-3">
           <div>
             <h2 class="text-3xl font-bold inline">Cozy Island</h2>
-            <span class="">Solo Developer</span>
+            <nobr><span class="align-text-bottom">(Solo Developer)</span></nobr>
           </div>
           <p><strong>Tech:</strong> Unreal Engine, Blueprints</p>
           <p>
@@ -109,7 +109,7 @@
         <div class="md:w-1/2 flex flex-col space-y-3">
           <div>
             <h2 class="text-3xl font-bold inline">Galaxy Shooter</h2>
-            <span class="">Solo Developer</span>
+            <nobr><span class="align-text-bottom">(Solo Developer)</span></nobr>
           </div>
           <p><strong>Tech:</strong> Unity, C#</p>
           <p>
@@ -148,7 +148,7 @@
         <div class="md:w-1/2 flex flex-col space-y-3">
           <div>
             <h2 class="text-3xl font-bold inline">Mech Tower Defense</h2>
-            <span class="">Solo Developer</span>
+            <nobr><span class="align-text-bottom">(Solo Developer)</span></nobr>
           </div>
           <p><strong>Tech:</strong> Unity, C#</p>
           <p>
