swapped button hover stylings

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             <a
               href="https://github.com/Stonger44/Cozy-Island"
               target="_blank"
-              class="inline-block px-5 py-2 bg-black border border-white rounded hover:border hover:bg-black hover:border-black transition"
+              class="inline-block px-5 py-2 bg-black border border-black rounded hover:border hover:bg-black hover:border-white transition"
               >GitHub</a
             >
             <a
               href="https://stonger44.itch.io/cozy-island"
               target="_blank"
-              class="inline-block px-5 py-2 bg-red-500 border border-white rounded hover:border hover:bg-red-500 hover:border-red-500 transition"
+              class="inline-block px-5 py-2 bg-red-500 border border-red-500 rounded hover:border hover:bg-red-500 hover:border-white transition"
               >Itch.io</a
             >
           </div>
@@ -122,13 +122,13 @@
             <a
               href="https://github.com/Stonger44/Galaxy-Shooter"
               target="_blank"
-              class="inline-block px-5 py-2 bg-black border border-white rounded hover:border hover:bg-black hover:border-black transition"
+              class="inline-block px-5 py-2 bg-black border border-black rounded hover:border hover:bg-black hover:border-white transition"
               >GitHub</a
             >
             <a
               href="https://stonger44.itch.io/galaxy-shooter"
               target="_blank"
-              class="inline-block px-5 py-2 bg-red-500 border border-white rounded hover:border hover:bg-red-500 hover:border-red-500 transition"
+              class="inline-block px-5 py-2 bg-red-500 border border-red-500 rounded hover:border hover:bg-red-500 hover:border-white transition"
               >Itch.io</a
             >
           </div>
@@ -161,12 +161,12 @@
             <a
               href="https://github.com/Stonger44/Mech-Tower-Defense"
               target="_blank"
-              class="inline-block px-5 py-2 bg-black border border-white rounded hover:border hover:bg-black hover:border-black transition"
+              class="inline-block px-5 py-2 bg-black border border-black rounded hover:border hover:bg-black hover:border-white transition"
               >GitHub</a>
             <a
               href="https://stonger44.itch.io/mech-tower-defense"
               target="_blank"
-              class="inline-block px-5 py-2 bg-red-500 border border-white rounded hover:border hover:bg-red-500 hover:border-red-500 transition"
+              class="inline-block px-5 py-2 bg-red-500 border border-red-500 rounded hover:border hover:bg-red-500 hover:border-white transition"
               >Itch.io</a>
           </div>
         </div>
