--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               href="https://stonger44.itch.io/cozy-island"
               target="_blank"
               class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-[#fa5c5c] border border-[#fa5c5c] rounded hover:border hover:bg-[#fa5c5c] hover:border-white transition">
-              <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;Itch.io
+              <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 mt-[-3px]"></img>&nbsp;Itch.io
               </a>
           </div>
         </div>
@@ -138,7 +138,7 @@
               href="https://stonger44.itch.io/galaxy-shooter"
               target="_blank"
               class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-[#fa5c5c] border border-[#fa5c5c] rounded hover:border hover:bg-[#fa5c5c] hover:border-white transition">
-              <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;Itch.io
+              <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 mt-[-3px]"></img>&nbsp;Itch.io
             </a>
           </div>
         </div>
@@ -177,7 +177,7 @@
               href="https://stonger44.itch.io/mech-tower-defense"
               target="_blank"
               class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-[#fa5c5c] border border-[#fa5c5c] rounded hover:border hover:bg-[#fa5c5c] hover:border-white transition">
-              <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;Itch.io
+              <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 mt-[-3px]"></img>&nbsp;Itch.io
             </a>
           </div>
         </div>
