--- a/index.html
+++ b/index.html
@@ -28,14 +28,11 @@
     
     <!-- Navbar -->
     <nav class="bg-black bg-opacity-90 fixed top-0 w-full z-50">
-      <div class="max-w-5xl mx-auto px-4 py-5 md:py-4 flex justify-center items-center relative">
+      <div class="max-w-5xl mx-auto px-4 py-5 md:py-4 flex justify-between items-center relative">
         
-        <!-- Hamburger button (on small screens) -->
-        <button id="menu-toggle" class="md:hidden absolute right-4 text-white">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
-          </svg>
-        </button>
+        <div class="text-2xl font-semibold">
+          Brian Kenji Stong
+        </div>
 
         <!-- Links container -->
         <div id="menu" class="hidden md:flex space-x-6 text-base font-medium">
@@ -45,13 +42,23 @@
           <a href="https://github.com/Stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap  group">
             <i class="fab fa-github"></i>&nbsp;<span class="group-hover:underline group-active:underline">GitHub</span>
           </a>
+          <a href="https://medium.com/@stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap group">
+            <i class="fab fa-medium"></i>&nbsp;<span class="group-hover:underline group-active:underline">Medium</span>
+          </a>
           <a href="https://stonger44.itch.io/" target="_blank" class="inline-flex items-center whitespace-nowrap  group">
             <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4" alt="Itch.io" />&nbsp;<span class="group-hover:underline group-active:underline">Itch.io</span>
           </a>
-          <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
+          <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
             <i class="fab fa-linkedin"></i>&nbsp;<span class="group-hover:underline group-active:underline">LinkedIn</span>
           </a>
         </div>
+
+        <!-- Hamburger button (on small screens) -->
+        <button id="menu-toggle" class="md:hidden absolute right-4 text-white">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
+          </svg>
+        </button>
 
       </div>
 
@@ -69,13 +76,18 @@
           </a>
         </div>
         <div>
+          <a href="https://medium.com/@stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap group">
+            <i class="fab fa-medium"></i>&nbsp;<span class="group-hover:underline group-active:underline">Medium</span>
+          </a>
+        </div>
+        <div>
           <a href="https://stonger44.itch.io/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
             <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 translate-x-[2px]" alt="Itch.io" />
             &nbsp;<span class="group-hover:underline group-active:underline translate-x-[5px]">Itch.io</span>
           </a>
         </div>
         <div>
-          <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
+          <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
             <i class="fab fa-linkedin"></i>&nbsp;<span class="group-hover:underline group-active:underline">LinkedIn</span>
           </a>
         </div>
@@ -241,10 +253,13 @@
         <a href="https://github.com/Stonger44" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
           <i class="fab fa-github"></i>&nbsp;<span class="group-hover:underline group-active:underline">GitHub</span>
         </a>
+        <a href="https://medium.com/@stonger44" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
+          <i class="fab fa-medium"></i>&nbsp;<span class="group-hover:underline group-active:underline">Medium</span>
+        </a>
         <a href="https://stonger44.itch.io/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
           <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;<span class="group-hover:underline group-active:underline">Itch.io</span>
         </a>
-        <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
+        <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
           <i class="fab fa-linkedin"></i>&nbsp;<span class="group-hover:underline group-active:underline">LinkedIn</span>
         </a>
       </nav>
@@ -260,12 +275,17 @@
           </a>
         </div>
         <div class="my-1">
+          <a href="https://medium.com/@stonger44" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
+            <i class="fab fa-medium"></i>&nbsp;<span class="group-hover:underline group-active:underline">Medium</span>
+          </a>
+        </div>
+        <div class="my-1">
           <a href="https://stonger44.itch.io/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
             <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;<span class="group-hover:underline group-active:underline">Itch.io</span>
           </a>
         </div>
         <div class="my-1">
-          <a href="https://www.linkedin.com/in/brian-stong-b36218133/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
+          <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap group">
             <i class="fab fa-linkedin"></i>&nbsp;<span class="group-hover:underline group-active:underline">LinkedIn</span>
           </a>
         </div>
