updated resume pdf and email

--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
       <div class="standard-screen-size mt-10 mb-6">
         Copyright &copy; <span class="year"></span>
         <span>&nbsp;|&nbsp;</span>
-        <a href="mailto:stonger44@gmail.com" class="hover:underline active:underline">stonger44@gmail.com</a>
+        <a href="mailto:brian.kenji.stong@gmail.com" class="hover:underline active:underline">brian.kenji.stong@gmail.com</a>
       </div>
       <div class="small-screen-size mt-10 mb-6">
         <div class="my-2">
-          <a href="mailto:stonger44@gmail.com" class="hover:underline active:underline">stonger44@gmail.com</a>
+          <a href="mailto:brian.kenji.stong@gmail.com" class="hover:underline active:underline">brian.kenji.stong@gmail.com</a>
         </div>
         <div class="my-2">
           Copyright &copy; <span class="year"></span>
