select-text on footer

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="mt-auto bg-black text-center py-6 select-none">
+    <footer class="mt-auto bg-black text-center py-6 select-text">
       <nav class="standard-screen-size my-6">
         <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" class="mx-2 inline-flex items-center whitespace-nowrap group">
           <i class="fas fa-file-alt"></i>&nbsp;<span class="group-hover:underline group-active:underline">Resume</span>
@@ -304,6 +304,7 @@
         </div>
       </div>
     </footer>
+    
   </div>
 
   <script src="js/main.js"></script>
