--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       <div class="max-w-5xl w-full mx-auto">
         
         <!-- Hero Section -->
-        <section class="container mx-auto px-4 pt-10">
-          <div class="flex flex-col md:flex-row items-center justify-center gap-12 w-full max-w-5xl mx-auto">
+        <section class="pt-10">
+          <div class="flex flex-col md:flex-row items-center justify-center gap-12 w-full">
             <img
               src="assets/images/profilePic1.jpg"
               alt="Brian Kenji Stong"
