further testing required...

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
   </footer>
 
   <!-- Black bottom overlay to cover overscroll background -->
-  <div id="overscroll-cover" class="fixed bottom-0 left-0 right-0 h-40 bg-black pointer-events-none z-20 hidden"></div>
+  <div id="overscroll-cover" class="fixed bottom-0 left-0 right-0 bg-black pointer-events-none z-20 hidden"></div>
 
   <script src="js/main.js"></script>
 </body>
