--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </span>
         </a>
         <a href="https://stonger44.itch.io/" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap group">
-          <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4" alt="Itch.io" />
+          <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 select-none" alt="Itch.io" />
           &nbsp;
           <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
             Itch.io
@@ -106,7 +106,7 @@
       </div>
       <div>
         <a href="https://stonger44.itch.io/" target="_blank" class="inline-flex items-center whitespace-nowrap">
-          <img src="./assets/images/itchio-logo-textless-white.png" class="w-5 h-5 translate-x-[2px]" alt="Itch.io" />
+          <img src="./assets/images/itchio-logo-textless-white.png" class="w-5 h-5 translate-x-[2px] select-none" alt="Itch.io" />
           &nbsp;<span class="translate-x-[5px]">Itch.io</span>
         </a>
       </div>
@@ -171,14 +171,14 @@
               <a
                 href="https://github.com/Stonger44/Cozy-Island"
                 target="_blank"
-                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-black border border-black rounded hover:border hover:bg-black hover:border-white transition">
+                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-black border-[1.5px] border-black rounded hover:border-[1.5px] hover:bg-black hover:border-white transition">
                 <i class="fab fa-github"></i>&nbsp;GitHub
               </a>
               <a
                 href="https://stonger44.itch.io/cozy-island"
                 target="_blank"
-                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-[#fa5c5c] border border-[#fa5c5c] rounded hover:border-white transition">
-                <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;Itch.io
+                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-[#fa5c5c] border-[1.5px] border-[#fa5c5c] rounded hover:border-[1.5px] hover:bg-[#fa5c5c] hover:border-white transition">
+                <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 select-none"></img>&nbsp;Itch.io
                 </a>
             </div>
           </div>
@@ -211,14 +211,14 @@
               <a
                 href="https://github.com/Stonger44/Galaxy-Shooter"
                 target="_blank"
-                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-black border border-black rounded hover:border hover:bg-black hover:border-white transition">
+                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-black border-[1.5px] border-black rounded hover:border-[1.5px] hover:bg-black hover:border-white transition">
                 <i class="fab fa-github"></i>&nbsp;GitHub
               </a>
               <a
                 href="https://stonger44.itch.io/galaxy-shooter"
                 target="_blank"
-                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-[#fa5c5c] border border-[#fa5c5c] rounded hover:border hover:bg-[#fa5c5c] hover:border-white transition">
-                <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;Itch.io
+                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-[#fa5c5c] border-[1.5px] border-[#fa5c5c] rounded hover:border-[1.5px] hover:bg-[#fa5c5c] hover:border-white transition">
+                <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 select-none"></img>&nbsp;Itch.io
               </a>
             </div>
           </div>
@@ -251,14 +251,14 @@
               <a
                 href="https://github.com/Stonger44/Mech-Tower-Defense"
                 target="_blank"
-                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-black border border-black rounded hover:border hover:bg-black hover:border-white transition">
+                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-black border-[1.5px] border-black rounded hover:border-[1.5px] hover:bg-black hover:border-white transition">
                 <i class="fab fa-github"></i>&nbsp;GitHub
               </a>
               <a
                 href="https://stonger44.itch.io/mech-tower-defense"
                 target="_blank"
-                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-[#fa5c5c] border border-[#fa5c5c] rounded hover:border hover:bg-[#fa5c5c] hover:border-white transition">
-                <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4"></img>&nbsp;Itch.io
+                class="inline-flex items-center whitespace-nowrap px-5 py-2 bg-[#fa5c5c] border-[1.5px] border-[#fa5c5c] rounded hover:border-[1.5px] hover:bg-[#fa5c5c] hover:border-white transition">
+                <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 select-none"></img>&nbsp;Itch.io
               </a>
             </div>
           </div>
@@ -288,7 +288,7 @@
         <i class="fab fa-medium"></i>
       </a>
       <a href="https://stonger44.itch.io/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-[-10px] after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-[90%]">
-        <img src="./assets/images/itchio-logo-textless-white.png" class="w-7 h-7 relative top-[2px]"></img>
+        <img src="./assets/images/itchio-logo-textless-white.png" class="w-7 h-7 relative top-[2px] select-none"></img>
       </a>
       <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="mx-2 inline-flex items-center whitespace-nowrap relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-[-6px] after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 hover:after:w-[75%]">
         <i class="fab fa-linkedin"></i>
