--- a/index.html
+++ b/index.html
@@ -20,14 +20,36 @@
 </head>
 <body class="font-roboto text-white text-lg flex flex-col min-h-screen relative overflow-x-hidden">
 
-  <!-- Background image div -->
-  <div
-    class="fixed inset-0 z-10 bg-cover bg-center"
-    style="background-image: url('assets/images/Horizon.jpg');"
-  ></div>
-
   <!-- Background dim overlay -->
-  <div class="fixed inset-0 z-10 bg-black/30"></div>
+  <div class="fixed inset-0 z-10 bg-black/80"></div>
+
+  <!-- Background video container -->
+  <div class="fixed inset-0 z-0 overflow-hidden grayscale">
+    <video
+      class="bg-video absolute inset-0 w-full h-full object-cover opacity-100 transition-opacity duration-2000"
+      autoplay
+      muted
+      playsinline
+    >
+      <source src="assets/videos/CozyIsland_Demo.mp4" type="video/mp4" />
+    </video>
+    <video
+      class="bg-video absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-2000"
+      autoplay
+      muted
+      playsinline
+    >
+      <source src="assets/videos/GalaxyShooter_Demo.mp4" type="video/mp4" />
+    </video>
+    <video
+      class="bg-video absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-2000"
+      autoplay
+      muted
+      playsinline
+    >
+      <source src="assets/videos/MechTowerDefense_Demo.mp4" type="video/mp4" />
+    </video>
+  </div>
 
   <!-- Navbar -->
   <nav class="bg-black bg-opacity-90 fixed top-0 w-full z-30">
