Increased bg-video play speed a bit
also changed Cozy Island text a bit

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
             <p><strong>Tech:</strong> Unreal Engine, Blueprints</p>
             <p>
-              Relax on a cozy island inspired by calming ASMR audio. Explore the island, gather wood and stone resources, and build simple things. Enjoy your time on Cozy Island!
+              Relax on a cozy island inspired by calming ASMR audio. Explore the island, gather wood and stone resources, and build simple structures. Enjoy your time on Cozy Island!
             </p>
             <p>
               Developed a modular resource tracking system for buildable actors, a hybrid collision/line trace interaction system using custom object and trace channels, and a footstep audio system using physical material detection via trace.
