Cleaned up duplicate css classes

--- a/index.html
+++ b/index.html
@@ -60,36 +60,36 @@
       </div>
 
       <!-- Links container -->
-      <div id="menu" class="flex space-x-6 text-base font-medium">
-        <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap group">
+      <div id="menu" class="flex space-x-6 text-lg font-medium">
+        <a href="assets/files/Brian_Stong_Resume_GameDeveloper.pdf" target="_blank" class="inline-flex items-center whitespace-nowrap group">
           <i class="fas fa-file-alt"></i>
           &nbsp;
           <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
             Resume
           </span>
         </a>
-        <a href="https://github.com/Stonger44" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap  group">
+        <a href="https://github.com/Stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap  group">
           <i class="fab fa-github"></i>
           &nbsp;
           <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
             GitHub
           </span>
         </a>
-        <a href="https://medium.com/@stonger44" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap group">
+        <a href="https://medium.com/@stonger44" target="_blank" class="inline-flex items-center whitespace-nowrap group">
           <i class="fab fa-medium"></i>
           &nbsp;
           <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
             Medium
           </span>
         </a>
-        <a href="https://stonger44.itch.io/" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap group">
+        <a href="https://stonger44.itch.io/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
           <img src="./assets/images/itchio-logo-textless-white.png" class="w-4 h-4 select-none" alt="Itch.io" />
           &nbsp;
           <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
             Itch.io
           </span>
         </a>
-        <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="text-lg font-medium inline-flex items-center whitespace-nowrap group">
+        <a href="https://www.linkedin.com/in/brian-stong/" target="_blank" class="inline-flex items-center whitespace-nowrap group">
           <i class="fab fa-linkedin"></i>
           &nbsp;
           <span class="relative after:absolute after:left-1/2 after:-translate-x-1/2 after:bottom-0 after:h-[2px] after:w-0 after:bg-white after:transition-all after:duration-300 group-hover:after:w-full">
