Updated project text with bullets
also updated resume with the same

--- a/index.html
+++ b/index.html
@@ -190,9 +190,11 @@
             <p>
               Relax on a cozy island inspired by calming ASMR audio. Explore the island, gather wood and stone resources, and build simple structures. Enjoy your time on Cozy Island!
             </p>
-            <p>
-              Developed a modular resource tracking system for buildable actors, a hybrid collision/line trace interaction system using custom object and trace channels, and a footstep audio system using physical material detection via trace.
-            </p>
+            <ul class="list-disc list-outside pl-4 space-y-1">
+              <li><strong>Modular resource tracking system</strong> for buildable actors</li>
+              <li><strong>Hybrid collision/line trace interaction system</strong> with custom channels</li>
+              <li><strong>Footstep audio system</strong> using physical material detection via trace</li>
+            </ul>
             <div class="space-x-4 flex">
               <a
                 href="https://github.com/Stonger44/Cozy-Island"
@@ -230,9 +232,11 @@
             <p>
               A horizontal space shooter arcade! Pew pew enemies! Collect Power-Ups! Shields! Missiles! Space Bombs! Can you survive all 5 waves and defeat the Boss?!
             </p>
-            <p>
-              Horizontal space shooter with difficulty inspired by Dark Souls. Designed a multi-phase boss battle with regenerating shields, destructible generators, and timed vulnerability. Implemented a time-slowing boost, homing missiles, and space bombs for high-impact tactical play. Power-ups must be earned and used strategically.
-            </p>
+            <ul class="list-disc list-outside pl-4 space-y-1">
+              <li><strong>Multi-phase boss</strong> with regenerating shields, destructible generators, and timed vulnerability</li>
+              <li><strong>Time-slowing boost</strong>, homing missiles, and space bombs for high-impact tactical play</li>
+              <li><strong>Strategic power-up mechanics</strong> that must be earned and used wisely</li>
+            </ul>
             <div class="space-x-4 flex">
               <a
                 href="https://github.com/Stonger44/Galaxy-Shooter"
@@ -270,9 +274,11 @@
             <p>
               Defend your home from invading Mechs! Deploy, repair, and upgrade Auto Cannon and Missile Launcher Towers! Hold the line!
             </p>
-            <p>
-              Endless tower defense game with deployable, repairable, and upgradeable towers. Created indirect-fire missile launcher for targeting heavy mechs. Designed responsive HUD that flickers yellow on damage, red at low health, and resets on restart to reinforce player state.
-            </p>
+            <ul class="list-disc list-outside pl-4 space-y-1">
+              <li><strong>Indirect-fire missile launcher</strong> for targeting heavy mechs</li>
+              <li><strong>Responsive HUD</strong> that flickers yellow on damage, turns red at low health, and resets on restart</li>
+              <li><strong>Tower mechanics</strong> including deployment, repair, and upgrades for adaptive strategy</li>
+            </ul>
             <div class="space-x-4 flex">
               <a
                 href="https://github.com/Stonger44/Mech-Tower-Defense"
