--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <ul class="list-disc list-outside pl-4 space-y-1">
               <li><strong>Modular resource tracking system</strong> for buildable actors</li>
               <li><strong>Hybrid collision/line trace interaction system</strong> with custom channels</li>
-              <li><strong>Footstep audio system</strong> using physical material detection via trace</li>
+              <li><strong>Dynamic footstep audio system</strong> using physical material detection via trace</li>
             </ul>
             <div class="space-x-4 flex">
               <a
